--- a/shows.css
+++ b/shows.css
@@ -13,13 +13,16 @@ body{
 .contactus{
     background-color: rgb(124, 5, 5);
     color: white;
+    
 }
-.contactus {
+.contactcontent1 {
     display: flex;
     padding: 20px;
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    justify-content: space-around;
+    
     
 
 }
@@ -38,16 +41,21 @@ body{
     margin-bottom: 20px; 
 }
 
-.footer{
-    background-color: rgb(22, 22, 22);
+/* footer */
+
+
+footer {
+    padding: 10px 65px 10px 20px;
+    margin-top: px; 
+    background-color: black;
     color: white;
-    align-content: center;
     display: flex;
-    justify-content: center;
-    line-height: 50px;
-    margin-top: px;
-    
+    flex-direction: row;
+    justify-content: space-around;
+    gap:0;
 }
+    
+
 .contentfooter a{
     color: white;
     justify-content: space-evenly;
@@ -630,7 +638,7 @@ body{
 }
 .image{
     background-image: url(images/commedy.jpg);
-    color: #fff;
+    color: rgb(34, 30, 30);
     margin-top: 10px;
     margin-bottom: 50px;
 }
@@ -638,3 +646,53 @@ body{
     padding: 10px;
     color: white;
 }
+/* header part */
+.logo{
+    color: white;
+    margin-top: 0.5%;
+    font-weight: bolder;
+}
+.logo .store{
+    color: red;
+}
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    background-color: black;
+    padding: 5px;
+    z-index: 1000; 
+}
+
+.navbar {
+    background-color: black;
+    overflow: hidden;
+}
+.navbar a {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    font-family: 900;
+    text-decoration: none;
+}
+.navbar a:hover, .navbar a:active, .navbar a.selected {
+    
+    color: red;
+    text-decoration: underline;
+}
+.navbar a img {
+    width: 20px; 
+    height: 20px; 
+
+}
+.navbar a img:hover{
+    background-color:white;
+}
+/* end of header styling  */
+
